# AirHockeyRobot

./: README.md  airHockeySim.html  build.bat
docs/: SteppingAlgorithm.txt
docs/Additional Project - CoreXY System Simulation/: Project - Simulate CoreXY Dynamics.ipynb
docs/Hardware Electrical Schematics/: DT06_HardwareSchematic_Final(1).kicad_sch
docs/old/: opencvTest.cpp
include/: Constants.h
include/Motion/: Mallet.h  Puck.h
include/Types/: Matrix.hpp  Point2.hpp  Point3.hpp
laptop/: .gitignore  CMakeLists.txt  README.md  build.bat
laptop/include/: FileFormat.hpp  StateTracker.h
laptop/include/Comms/: SerialLink.hpp  WinUSBLink.hpp
laptop/include/Examples/: Physics.hpp
laptop/include/Interaction/: Button.hpp  GuiWindow.hpp  RoutineButton.hpp
laptop/include/Motion/: IObjectView.hpp  Mallet.h  MovingObject.h  MovingObject.hpp  Puck.h  PuckTracker.h  Table.hpp
laptop/include/Motion/Routines/: BasicDefenseRoutine.h  MotionTestRoutine.h  Routine.h  StrikeTestRoutine.h
laptop/include/Routines/: AdvancedDefenseRoutine.hpp  BasicDefenseRoutine.hpp  BasicOffenseRoutine.hpp  DodgeRoutine.hpp  GoalDefenseRoutine.hpp  ManualRoutine.hpp  MotionTestRoutine.hpp  NoOperationRoutine.hpp  Routine.hpp  StrikeTestRoutine.hpp  StrikingRoutine.hpp
laptop/include/Simulation/: Collision.hpp  Physics.hpp  Table.h  TorqueSpeed.hpp  TorqueSpeedCurve.hpp
laptop/include/State/: KeyLog.h  StateTracker.h
laptop/include/Tracking/: CameraTracker.hpp  NoOperationTracker.hpp  PhysicsTracker.hpp  PuckTracker.hpp  TrackerOverlay.hpp
laptop/include/Types/: ColorFilter.hpp  Command.hpp  Matrix.hpp  StrikePlan.hpp
laptop/include/Vision/: PuckTracking.h
laptop/include/Visuals/: Graph.h  Graph.hpp  Overlay.hpp  Table.h
laptop/src/: StateTracker.cpp  main.cpp
laptop/src/Comms/: SerialLink.cpp
laptop/src/Examples/: GraphTest.cpp  OpenCVTest.cpp  PacketTest.cpp  PhysicsSim.cpp  PuckPrediction.cpp  malletSensorFeedbackVisualizer.cpp
laptop/src/Interaction/: Button.cpp  GuiWindow.cpp
laptop/src/Motion/: Mallet.cpp  MovingObject.cpp  Puck.cpp  PuckTracker.cpp  Table.cpp
laptop/src/Motion/Routines/: BasicDefenseRoutine.cpp  MotionTestRoutine.cpp  Routine.cpp  StrikeTestRoutine.cpp
laptop/src/Routines/: AdvancedDefenseRoutine.cpp  BasicDefenseRoutine.cpp  BasicOffenseRoutine.cpp  DodgeRoutine.cpp  GoalDefenseRoutine.cpp  ManualRoutine.cpp  MotionTestRoutine.cpp  NoOperationRoutine.cpp  Routine.cpp  StrikeTestRoutine.cpp  StrikingRoutine.cpp
laptop/src/Simulation/: Table.cpp
laptop/src/State/: KeyLog.cpp  StateTracker.cpp
laptop/src/Tracking/: CameraTracker.cpp  NoOperationTracker.cpp  PhysicsTracker.cpp  PuckTracker.cpp  TrackerOverlay.cpp
laptop/src/Vision/: PuckTracking.cpp
laptop/src/Visuals/: Graph.cpp  Overlay.cpp  Table.cpp
old/openCVTests/: airHockeySim.html  colorTracking.cpp
shared/include/: Constants.h  Constants.hpp  README.md
shared/include/Comms/: Packet.h  Packet.hpp  PacketBuffer.hpp  SerialLink.h  SerialLink.hpp
shared/include/Types/: Packet.h  Point2.hpp  Point3.hpp  Ray2.hpp  Ray3.hpp  Timer.hpp  VelocityProfile.hpp
shared/src/Comms/: Packet.cpp
src/: main.cpp
src/Motion/: Mallet.cpp  Puck.cpp
src/openCVTests/: opencvTest.cpp
stm32/: README.md  platformio.ini
stm32/include/: Pin.h  PinDef.h  PinOut.h  PinOut.hpp  main.h
stm32/include/Comms/: STMLink.hpp  SerialLink.hpp
stm32/include/Motion/: Gantry.h  Gantry.hpp  GantryTimer.hpp  Motor.h  Motor.hpp  StepperDriver.h
stm32/include/Motion/Driver/: HighPowerStepperDriver.h  HighPowerStepperDriver.hpp  LICENSE.txt
stm32/include/Motor/: Motor.h
stm32/include/Sensors/: DistanceSensor.h  DistanceSensor.hpp  EmergencyStop.hpp  EstopTriggered.hpp  LimitSwitch.h  LimitSwitch.hpp  Sensor.h  Sensor.hpp  TemperatureSensor.h  TemperatureSensor.hpp
stm32/include/Types/: PinDef.h  PinDef.hpp
stm32/src/: Pin.cpp  PinOut.cpp  main copy.cpp  main.cpp
stm32/src/Comms/: SerialLink.cpp
stm32/src/Motion/: Gantry.cpp  Motor.cpp  StepperDriver.cpp
stm32/src/Motor/: Motor.cpp
stm32/src/Sensors/: DistanceSensor.cpp  EmergencyStop.cpp  EstopTriggered.cpp  LimitSwitch.cpp  Sensor.cpp  TemperatureSensor.cpp
stm32/src/Types/: PinDef.cpp
